# juscraper

./: .gitignore  .nojekyll  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  api-conventions.html  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: RELEASE_TEMPLATE.md
captcha/: tjma_captcha.html  tjse_captcha.html
docs/: Makefile  _quarto.yml  api-conventions.qmd  conf.py  example.ipynb  index.qmd  make.bat  objects.json
jupyter_execute/: example.ipynb
notebooks/: datajud.html  datajud.ipynb  example.ipynb  jusbr.html  jusbr.ipynb  pdpj.html  tjac.html  tjal.html  tjam.html  tjap.html  tjba.html  tjce.html  tjdft.html  tjdft.ipynb  tjes.html  tjgo.html  tjmg.html  tjms.html  tjmt.html  tjpa.html  tjpb.html  tjpe.html  tjpi.html  tjpr.html  tjpr.ipynb  tjrj.html  tjrn.html  tjro.html  tjrr.html  tjrs.html  tjrs.ipynb  tjsc.html  tjsp.html  tjsp.ipynb  tjto.html  trf3.html  trf5.html  trf6.html
reference/: aggregators.datajud.client.DatajudScraper.html  aggregators.jusbr.client.JusbrScraper.html  aggregators.pdpj.client.PdpjScraper.html  courts.tjac.client.TJACScraper.html  courts.tjal.client.TJALScraper.html  courts.tjam.client.TJAMScraper.html  courts.tjap.client.TJAPScraper.html  courts.tjba.client.TJBAScraper.html  courts.tjce.client.TJCEScraper.html  courts.tjdft.client.TJDFTScraper.html  courts.tjes.client.TJESScraper.html  courts.tjgo.client.TJGOScraper.html  courts.tjmg.client.TJMGScraper.html  courts.tjms.client.TJMSScraper.html  courts.tjmt.client.TJMTScraper.html  courts.tjpa.client.TJPAScraper.html  courts.tjpb.client.TJPBScraper.html  index.html  scraper.html  (+14 more)
(+673 files in other folders)
