[project]
name = "juscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]
