[project]
name = "juscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "nest-asyncio>=1.6.0",
    "pandas>=2.2.3",
    "pip>=25.1",
    "pyarrow>=19.0.1",
    "pyjwt>=2.10.1",
    "pyppeteer>=2.0.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]
